# py-template

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: contributing.md  index.md  mkdocs.yml
src/py_template/: main.py  scaffolder.py  templates.py
tests/: test_main.py  test_scaffolder.py
