[project]
name = "py-template"
version = "0.1.0"
description = "A CLI tool to scaffold Python projects with uv"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Manuel Rodríguez Sutil", email = "mrodsut@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "inquirerpy>=0.3.4",
    "pyfiglet>=1.0.4",
    "rich>=14.1.0",
]

[project.scripts]
py-template = "py_template.main:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = [
    "data/",
    "models/",
    "notebooks/",  # Ignore all Jupyter notebooks
]

[tool.ruff.lint]
# Keep the essentials for bug prevention & cleanup
select = [
    "E",   # Pycodestyle (errors only, not style preferences)
    "F",   # Pyflakes (unused imports, undefined names, etc.)
    "B",   # flake8-bugbear (common bugs)
    "UP",  # pyupgrade (modernize syntax)
]
# Ignore nitpicky or unnecessary rules
ignore = [
    "E501",  # Don't enforce line length
    "B008",  # Allow function calls in FastAPI defaults
]

[tool.ruff.format]
# Auto-format with minimal changes
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
